--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk: openjdk8
 install: "./installViaTravis.sh"
-script: "./buildViaTravis.sh"
+script: ./gradlew -Prelease.travisci=true build --stacktrace
 cache:
   directories:
   - "$HOME/.gradle/caches/"
