Pin httpclient in twitter sample, remove unnecessary import in build.gradle of groupby sample

--- a/twitter-sample/build.gradle
+++ b/twitter-sample/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'java'
 configurations.all {
     resolutionStrategy {
         force "com.google.guava:guava:18.0"
+        force "org.apache.httpcomponents:httpclient:4.5.9"
     }
 }
 
