--- a/synthetic-sourcejob/build.gradle
+++ b/synthetic-sourcejob/build.gradle
@@ -18,6 +18,7 @@ ext {
     mantisVersion = '1.2.+'
     mqlVersion = '3.2.2'
     mockNeatVersion = '0.3.7'
+    slf4jVersion = '1.7.28'
 }
 
 task execute(type:JavaExec) {
@@ -33,11 +34,9 @@ dependencies {
     implementation "io.mantisrx:mql-jvm:$mqlVersion"
 
     implementation "net.andreinc.mockneat:mockneat:$mockNeatVersion"
-
+    implementation "org.slf4j:slf4j-log4j12:$slf4jVersion"
     compileOnly "org.projectlombok:lombok:1.16.16"
 
-    testCompile 'junit:junit'
     testCompile "org.mockito:mockito-all:1.9.5"
-    // update kafka-unit version for kafka 2.2.+ once this PR is released https://github.com/chbatey/kafka-unit/pull/69
-    testCompile 'info.batey.kafka:kafka-unit:1.0'
+
 }
