change app name to be different from the web sample. Reduce data push frequency

--- a/mantis-publish-sample/src/main/resources/application.properties
+++ b/mantis-publish-sample/src/main/resources/application.properties
@@ -6,4 +6,4 @@ mantis.publish.discovery.api.hostname=172.16.186.7
 mantis.publish.discovery.api.port=7101
 
 # This application's name
-mantis.publish.app.name=TestApp
+mantis.publish.app.name=JavaApp
