--- a/mantis-publish-sample/build.gradle
+++ b/mantis-publish-sample/build.gradle
@@ -53,7 +53,7 @@ ext {
 
 
 dependencies {
-    compile 'io.mantisrx:mantis-publish-netty-guice:1.2.16'
+    compile 'io.mantisrx:mantis-publish-netty-guice:1.2.+'
     implementation "com.netflix.spectator:spectator-ext-ipc:$spectatorVersion"
     implementation "com.netflix.archaius:archaius2-core:$archaiusVersion"
     implementation "com.netflix.archaius:archaius2-guice:$archaiusVersion"
