--- a/mantis-publish-web-sample/build.gradle
+++ b/mantis-publish-web-sample/build.gradle
@@ -45,7 +45,7 @@ ext {
 dependencies {
 
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
-    compile 'io.mantisrx:mantis-publish-netty-guice:1.2.16'
+    compile 'io.mantisrx:mantis-publish-netty-guice:1.2.+'
     implementation "com.netflix.spectator:spectator-ext-ipc:$spectatorVersion"
     implementation "com.netflix.archaius:archaius2-core:$archaiusVersion"
     implementation "com.netflix.archaius:archaius2-guice:$archaiusVersion"
