wordcount: Added new tutorial for basic word count.

--- a/.gitignore
+++ b/.gitignore
@@ -179,7 +179,7 @@ tags
 .gradle
 build/
 
-# Ignore Gradle GUI config
+# Ignore Gradle GUI com.netflix.mantis.examples.config
 gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
