--- a/sine-function/build.gradle
+++ b/sine-function/build.gradle
@@ -27,5 +27,6 @@ task execute(type:JavaExec) {
 }
 dependencies {
     compile 'io.mantisrx:mantis-runtime:1.2.+'
-
+    compile 'com.fasterxml.jackson.core:jackson-core:2.11.1'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
 }
